[metadata]
license_file = LICENSE

[sdist]
formats=gztar

[tool:pytest]
norecursedirs = .git build .tox/ .tmp/
addopts = --ignore=.tmp/ --ignore=.git/ --ignore=.tox/
testpaths = test/unit/

[flake8]
exclude = .tox*/*
# we allow long lines
# FIXME: F821 only ignored because EC2ImageUploader not on pypi
ignore = E501, F821
