[bumpversion]
current_version = 13.16.0
commit = True
tag = True

[metadata]
license_file = LICENSE

[sdist]
formats = gztar

[tool:pytest]
norecursedirs = .git build .tox/ .tmp/
addopts = --ignore=.tmp/ --ignore=.git/ --ignore=.tox/ -p no:warnings
testpaths = test/unit/

[flake8]
exclude = .tox*/* migrations
ignore = E501

[bumpversion:file:package/mash.spec]
search = Version:        {current_version}
replace = Version:        {new_version}

[bumpversion:file:mash/version.py]

[bumpversion:file:mash/services/api/extensions.py]
